--- a/login/homepage.css
+++ b/login/homepage.css
@@ -4,11 +4,17 @@ body {
     background-color: #323741;
 }
 
+footer{
+  font-family: "Roboto Condensed";
+  background-color: black;
+  color: white;
+  position: fixed;
+  bottom: 0;
+}
 
 #mainlogo{
-  width: 50%;
+  width: 100%;
   height: 10%;
-  margin-top: 5%;
   display: block;
   margin-left: auto;
   margin-right: auto;
