Changed post background pic

--- a/browse/post/styles/main.css
+++ b/browse/post/styles/main.css
@@ -27,7 +27,7 @@ header {
 	padding: 0;
 	margin: 0;
 	width: 100%;
-	background-image: url("../../../resources/images/loz.jpg");
+	background-image: url("../../../resources/images/portal2.jpg");
 	background-size: 125%;
 	background-position: 50% 50%;
 }
