--- a/login/homepage.css
+++ b/login/homepage.css
@@ -13,25 +13,14 @@ footer{
 }
 
 #mainlogo{
-  width: 100%;
-  height: 10%;
+  width: 33%;
   display: block;
   margin-left: auto;
   margin-right: auto;
 }
 
-#usernamefield{
-  display: block;
-  width: 10%;
-  height: 10%;
+#loginField{
   margin: auto;
-  padding-top: 20px;
-}
-
-#passwordfield{
-  display: block;
-  width: 10%;
-  height: 15%;
-  margin: auto;
-  padding-top: 20px;
+  width:33%;
+  padding: 20px;
 }
