Added header styles to other forum pages

--- a/forum/post/styles/main.css
+++ b/forum/post/styles/main.css
@@ -1,3 +1,14 @@
+/*
+323741
+06858C
+45C48B
+FFD039
+EB3E4A
+*/
+
+header #headerBG {
+	background-image: url("../../../resources/images/shovelknight.jpg");
+}
 #sideNav {
 	float: left;
 	width: 20%;
