--- a/styles/main.css
+++ b/styles/main.css
@@ -147,7 +147,8 @@ header #headerTitle {
 	display: inline-block;
 	padding-bottom: 2rem;
 	background-color: rgba(31, 35, 41, 0);
-	transition: padding-top 300ms, padding-bottom 300ms, background-color 300ms;
+	box-shadow: 0 3px 5px 7px rgba(0,0,0,0);
+	transition: padding-top 300ms, padding-bottom 300ms, background-color 300ms, box-shadow 300ms;
 }
 #topNav_title {
 	position: absolute;
