--- a/Accounts/poster_viewing_own.css
+++ b/Accounts/poster_viewing_own.css
@@ -133,6 +133,7 @@ button:hover {
     top: 0;
     left: 0;
     display: none;
+    z-index: 10000;
 
 
 }
@@ -140,7 +141,7 @@ button:hover {
 .dialogBox {
     background-color: rgba(0,0,1,1);
     opacity: 10;
-    position: absolute;
+    position: relative;
     top: 20%;
     left: 20%;
     width:30%;
