--- a/forum/post/styles/main.css
+++ b/forum/post/styles/main.css
@@ -10,28 +10,16 @@ header #headerBG {
 	background-image: url("../../../resources/images/shovelknight.jpg");
 }
 #contents {
-	margin: 2.25rem 2rem;
-	animation: iniEnter 1500ms;
+	margin: 2.25rem 2rem
 }
 div.clearFloat {
 	clear: both;
 }
 
-#sideNavContainer {
-	float: left;
-	width: 20%;
-}
-#sideNav {
-	padding: 20px;
-	height: 400px;
-	background-color: rgba(0,0,0,0.2);
-}
 #threadContainer {
-	/*float: left;*/
 	width: 100%;
 }
 #thread {
-	/*margin: 0 0 2rem 2rem;*/
 }
 #thread > section {
 	background-color: rgb(40,44,52);
@@ -111,16 +99,16 @@ div.clearFloat {
 #postDetails {
 	margin-left: 20px;
 }
-#postDetailsUser {
+.userSection {
 	background-color: #1F2329;
 	margin-bottom: 20px;
 	white-space: nowrap;
 }
-#postDetailsUserInfo {
+.userSectionInfo {
 	vertical-align: middle;
 	display: inline-block;
 }
-#postDetailsUserInfo .postDetailsLabel {
+.userSectionInfo .postDetailsLabel {
 	display: block;
 	font-size: 10px;
 	font-family: "EncodeSans-Light";
@@ -131,7 +119,7 @@ div.clearFloat {
 i > .time {
 	display: none;
 }
-#postDetailsUserInfo:hover .postDetailsLabel i > .time {
+.userSectionInfo:hover .postDetailsLabel i > .time {
 	display: inline;
 }
 
@@ -145,24 +133,15 @@ i > .time {
 	border-radius: 50%;
 	margin-right: 10px;
 }
-.userReport {
-	position: absolute;
-	top: 10px;
-	right: 30px;
-}
-.userReport svg {
-	fill: red;
-	opacity: 0.5;
-	background-color: white;
-	padding: 3px;
-	height: 1.5em;
-	width: 1.5em;
-}
 .userSectionOptionsContainer {
 	position: absolute;
+	top: 40px;
+	right: 35px;
+	cursor: pointer;
+}
+#postDetails .userSectionOptionsContainer {
 	top: 30px;
 	right: 25px;
-	cursor: pointer;
 }
 .userSectionOptions {
 	position: relative;
@@ -218,13 +197,56 @@ i > .time {
 .userSectionOptions svg.active ~ .userSectionOptionsList {
 	display: block;
 }
+.comment {
+	position: relative;
+	overflow: scroll;
+}
+.comment .sectionCard {
+	padding: 15px;
+	box-shadow: none;
+}
 
+#requestInvite {
+	position: relative;
+	display: inline-block;
+	margin: 0;
+	padding: 10px;
+	margin-bottom: 10px;
+	background: #FFD039;
+	border: none;
+	border-radius: 4px;
+	color: black;
+	font-family: "EncodeSans-Bold";
+	font-size: 1rem;
+	width: 175px;
+	vertical-align: middle;
+	box-shadow: 0 3px 3px 2px rgba(0,0,0,1);
+	cursor: pointer;
+	top: 0;
+	transition: top 50ms;
+}
+#requestInvite:hover {
+	opacity: 0.8;
+}
+#requestInvite:active {
+	opacity: 0.9;
+	top: 4px;
+}
+#requestInvite:before {
+	content: "REQUEST INVITE";
+}
+#requestInvite.active {
+	background-color: #45C48B;
+}
+#requestInvite.active:before {
+	content: "INVITE REQUESTED";
+}
 .userMessage {
 	position: relative;
 	font-family: "EncodeSans-Regular";
 	line-height: 1.5em;
 	overflow: hidden;
-	max-height: 480px;
+	max-height: 380px;
 }
 .userMessage.overflow {
 	overflow: visible;
@@ -259,15 +281,18 @@ i > .time {
 	margin-top: 20px;
 }
 #spaceAvailableTitle {
+	display: inline-block;
 	opacity: 0.5;
 }
 #spaceAvailableNum {
+	display: inline-block;
 	font-size: 1.5rem;
 	margin-left: 5px;
+	margin-right: 0.75rem;
+	margin-bottom: 10px;
 }
 #spaceAvailableSlots {
 	line-height: 1em;
-	margin-top: 10px;
 }
 .spaceAvailableSlotsImg {
 	display: inline-block;
@@ -287,7 +312,6 @@ i > .time {
 @media screen and (max-width: 768px) {
 	#contents {
 		margin: 2.25rem 1rem;
-		animation: iniEnter2 1500ms;
 	}
 	#thread > section {
 		padding: 15px;
