--- a/forum/post/styles/main.css
+++ b/forum/post/styles/main.css
@@ -131,8 +131,12 @@ i > .time {
 	vertical-align: middle;
 	height: 3em;
 	border-radius: 50%;
+	border: 2px solid rgba(255,255,255,1);
+}
+.userSection .userProfilePic {
 	margin-right: 10px;
 }
+
 .userSectionOptionsContainer {
 	position: absolute;
 	top: 40px;
