--- a/styles/main.css
+++ b/styles/main.css
@@ -198,9 +198,12 @@ header #headerTitle {
 #topNav #loginButtonContainer {
 	position: absolute;
 	right: 0;
-	top: 0;
+	top: 2rem;
 	height: 100%;
+	text-align: center;
 	margin-right: 1rem;
+	transform: translateY(0);
+	transition: transform 300ms;
 }
 #loginButtonBG{
 	position: absolute;
@@ -217,8 +220,7 @@ header #headerTitle {
 	position: relative;
 	width: 75px;
 	z-index: 2;
-	margin: 2rem 1rem 0 0;
-	transition: margin-top 300ms;
+	margin: 0 1rem 0 0;
 }
 #topNav #loginButton:before {
 	background-color: #FFD039;
