--- a/forum/forum.css
+++ b/forum/forum.css
@@ -218,14 +218,19 @@ width: 100%;
 	background-color: grey;
 	color: white;
 }
+.requestInvite{
+	float: right;
+	width:75%;
+	height:75%;
+}
+.reportButton{
+	width:10%;
+}
 
 .status{
 	margin-left: 10%
 }
 
-.requestInvite{
-	float: right;
-}
 #leftSideAccountPage button {
     margin-top: 4%;
     margin-bottom: 4%;
