--- a/styles/main.css
+++ b/styles/main.css
@@ -201,7 +201,7 @@ header #headerTitle {
 	top: 2rem;
 	height: 100%;
 	text-align: center;
-	margin-right: 1rem;
+	margin-right: 2rem;
 	transform: translateY(0);
 	transition: transform 300ms;
 }
@@ -220,7 +220,7 @@ header #headerTitle {
 	position: relative;
 	width: 75px;
 	z-index: 2;
-	margin: 0 1rem 0 0;
+	margin: 0 0 0 0;
 }
 #topNav #loginButton:before {
 	background-color: #FFD039;
@@ -299,7 +299,7 @@ header #headerTitle {
 		top: 0;
 		left: 100vw;
 		margin: 0 !important;
-		width: 100px;
+		width: 200px;
 		overflow: scroll;
 		text-align: center;
 		z-index: 10;
@@ -350,12 +350,12 @@ header #headerTitle {
 		transform: translateX(0);
 	}
 	100% {
-		transform: translateX(-164px);
+		transform: translateX(-264px);
 	}
 }
 @keyframes navSlideOut {
 	0% {
-		transform: translateX(-164px);
+		transform: translateX(-264px);
 	}
 	100% {
 		transform: translateX(0);
