--- a/forum/post/styles/user.css
+++ b/forum/post/styles/user.css
@@ -10,8 +10,8 @@ header #headerBG {
 	background-image: url("../../../resources/images/loz.jpg");
 }
 #loginButtonBG {
-	width: 100px;
-	margin-right: 82px;
+	width: 76px;
+	margin-right: 1rem;
 	padding: 0 0;
 }
 
@@ -24,11 +24,13 @@ header #headerBG {
 	z-index: 2;
 	text-align: center;
 	width: 200px;
-	border-radius: 5px;
+	/*transform: translateX(66px);*/
+	transform: translateX(78px);
+	transition: transform 200ms;
 }
 #navUserImg {
-	height: 39px;
-	width: 39px;
+	height: 40px;
+	width: 40px;
 	cursor: pointer;
 	transform: scale(1);
 	transition: transform 200ms;
@@ -45,6 +47,7 @@ header #headerBG {
 	background-image: url("../../../resources/images/fortnite.jpg");
 	background-size: 200px 83px;
 	/*border: 5px solid black;*/
+	transform: translateX(-1rem);
 }
 
 #navUserOptionsList {
@@ -56,10 +59,8 @@ header #headerBG {
 	margin: 0;
 	padding: 0;
 	margin-top: 40px;
-	padding-bottom: 20px;
 	list-style: none;
 	background-color: #323741;
-	box-shadow: 0 2px 2px 1px rgba(0,0,0,0.7);
 	/*border-radius: 5px;
 	border-top-left-radius: 0;
 	border-top-right-radius: 0;*/
@@ -85,6 +86,7 @@ header #headerBG {
 }
 
 #navUserOptionsList.active {
+	box-shadow: 0 2px 2px 1px rgba(0,0,0,0.7);
 	display: block;
 }
 
@@ -93,4 +95,63 @@ li#navUserName {
 	padding-top: 10px;
 	padding-bottom: 10px;
 	background-color: #222;
+}
+
+section#commentFormContainer {
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+#commentForm {
+	margin-top: 5px;
+}
+#commentInput {
+	position: relative;
+    box-sizing: border-box;
+	display: block;
+	font-family: "EncodeSans-Regular";
+	font-size: 1em;
+	padding: 7px 12px;
+	width: 100%;
+	height: 5rem;
+	outline: none;
+	resize: none;
+	border: none;
+	background-color: #DDD;
+	margin: 0;
+}
+#commentInput:focus {
+	padding: 4px 9px;
+	border: 3px solid #FFD039;
+}
+#commentFormSubmit {
+	margin-top: 5px;
+	cursor: pointer;
+	border: none;
+	font-size: 13px;
+	padding: 10px;
+	opacity: 0.75;
+	color: white;
+	font-family: "EncodeSans-Regular";
+	background-color: #3c414c;
+	border-radius: 3px;
+	transform: translateY(0);
+	transition: transform 50ms;
+}
+#commentFormSubmit:hover {
+	background-color: #2fbf5d;
+	color: black;
+	opacity: 1;
+}
+#commentFormSubmit:active {
+	opacity: 0.8;
+	transform: translateY(4px);
+}
+
+@media screen and (max-width: 768px) {
+	#navUser {
+		transform: translateX(0);
+	}
+	#navUser.active {
+		transform: translateX(0);
+	}
 }
