--- a/styles/main.css
+++ b/styles/main.css
@@ -329,6 +329,42 @@ header #headerTitle {
 	}
 }
 
+.loadingIcon {
+	display: inline-block;
+	position: absolute;
+	width: 16px;
+	height: 16px;
+}
+.loadingIcon div {
+	box-sizing: border-box;
+	display: block;
+	position: absolute;
+	width: 16px;
+	height: 16px;
+	border: 2px solid;
+	border-radius: 50%;
+	border-color: white transparent transparent transparent;
+	animation: loadIcon 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+}
+.loadingIcon div:nth-child(1) {
+	animation-delay: -0.45s;
+}
+.loadingIcon div:nth-child(2) {
+	animation-delay: -0.3s;
+}
+.loadingIcon div:nth-child(3) {
+	animation-delay: -0.15s;
+}
+@keyframes loadIcon {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+
 @keyframes iniEnter {
 	0%, 40% {
 		opacity: 0;
