--- a/forum/post/styles/main.css
+++ b/forum/post/styles/main.css
@@ -51,13 +51,17 @@ div.clearFloat {
 .keywordLabel.BYOC:hover:after {
 	content: "Bring Your Own Controller";
 	position: absolute;
-	background-color: white;
-	opacity: 0.75;
+	background-color: rgba(0,0,0,0.6);
+	color: white;
+	font-family: "EncodeSans-Regular";
+	opacity: 0.9;
 	top: 1.8rem;
 	left: -30px;
-	padding: 0 5px;
-	font-size: 0.55em;
-	width: 107px;
+	padding: 5px;
+	line-height: normal;
+	font-size: 0.8em;
+	width: 110px;
+	border-radius: 5px;
 	text-align: center;
 }
 .keywordLabel.gameGenre {
@@ -130,9 +134,12 @@ i > .time {
 	display: inline;
 }
 
-.userName {
+h4 {
 	font-family: "EncodeSans-Regular";
+}
+.userName {
 	margin: 0;
+	display: inline-block;
 }
 
 .userProfilePic {
@@ -150,6 +157,7 @@ i > .time {
 	position: absolute;
 	top: 40px;
 	right: 35px;
+	z-index: 1;
 	cursor: pointer;
 }
 #postDetails .userSectionOptionsContainer {
@@ -161,7 +169,7 @@ i > .time {
 	font-family: "EncodeSans-Light";
 	white-space: nowrap;
 }
-.userSectionOptions svg {
+.userSectionOptions .userOptionsSVG {
 	position: relative;
 	z-index: 1;
 	fill: white;
@@ -169,10 +177,10 @@ i > .time {
 	height: 1.5em;
 	width: 1.5em;
 }
-.userSectionOptions svg:hover,
-.userSectionOptions svg.active {
+.userSectionOptions .userOptionsSVG:hover,
+.userSectionOptions .userOptionsSVG.active {
 	opacity: 1;
-}.userSectionOptions svg.active {
+}.userSectionOptions .userOptionsSVG.active {
 	fill: #45C48B;
 }
 .userSectionOptionsList {
@@ -201,7 +209,8 @@ i > .time {
 	border-bottom: 1px solid grey;
 
 }
-.userSectionOptionsList li a.report {
+.userSectionOptionsList li a.report,
+.userSectionOptionsList li a.delete {
 	color: rgba(235, 62, 74, 0.75);
 }
 .userSectionOptionsList li a svg {
@@ -211,7 +220,8 @@ i > .time {
 	width: 11px;
 	margin-right: 2px;
 }
-.userSectionOptionsList li a.report svg {
+.userSectionOptionsList li a.report svg,
+.userSectionOptionsList li a.delete svg {
 	fill: rgb(235, 62, 74);
 	opacity: 0.75;
 }
@@ -228,17 +238,18 @@ i > .time {
 	color: rgba(255,255,255,1);
 	background-color: rgba(255,255,255,0.1);
 }
-.userSectionOptionsList li:hover a.report {
+.userSectionOptionsList li:hover a.report,
+.userSectionOptionsList li:hover a.delete {
 	color: rgb(235, 62, 74);
 	background-color: rgba(235, 62, 74, 0.15);
 }
 .userSectionOptionsList li:hover a svg {
 	opacity: 1;
 }
-.userSectionOptionsList li:hover a.report svg {
-	/*fill: black;*/
+.userSectionOptionsList li:active {
+	opacity: 0.85;
 }
-.userSectionOptions svg.active ~ .userSectionOptionsList {
+.userSectionOptions .userOptionsSVG.active ~ .userSectionOptionsList {
 	display: block;
 }
 .comment {
@@ -350,6 +361,62 @@ i > .time {
 	background-color: black;
 }
 
+section#commentFormContainer {
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+#commentForm {
+	margin-top: 5px;
+}
+#commentFormContainer,
+#commentFormContainer * {
+	font-family: "EncodeSans-Regular";
+}
+#commentInput {
+	position: relative;
+    box-sizing: border-box;
+	display: block;
+	font-size: 1em;
+	padding: 7px 12px;
+	width: 100%;
+	height: 5rem;
+	outline: none;
+	resize: none;
+	border: none;
+	background-color: #DDD;
+	margin: 0;
+}
+#commentInput:focus {
+	padding: 4px 9px;
+	border: 3px solid #45C48B;
+}
+#commentFormSubmit {
+	margin-top: 10px;
+	cursor: pointer;
+	border: none;
+	font-size: 13px;
+	padding: 10px;
+	opacity: 0.75;
+	color: white;
+	background-color: #3c414c;
+	border-radius: 3px;
+	transform: translateY(0);
+	transition: transform 50ms;
+}
+#commentFormSubmit:hover {
+	background-color: #2fbf5d;
+	color: black;
+	opacity: 1;
+}
+#commentFormSubmit:active {
+	opacity: 0.8;
+	transform: translateY(4px);
+}
+
+section.curUser .userName {
+	border-bottom: 2px solid #FFD039;
+}
+
 @media screen and (max-width: 1200px) {
 	#contents {
 		margin: 2.25rem 2rem;
@@ -361,6 +428,10 @@ i > .time {
 	}
 	#thread > section {
 		padding: 15px;
+	}
+	.userSectionOptionsContainer {
+		top: 25px;
+		right: 20px;
 	}
 	#gameDetailsContainer {
 		float: none;
