--- a/styles/user.css
+++ b/styles/user.css
@@ -24,7 +24,6 @@ header #headerBG {
 	z-index: 2;
 	text-align: center;
 	width: 200px;
-	/*transform: translateX(66px);*/
 	transform: translateX(78px);
 	transition: transform 200ms;
 }
@@ -46,13 +45,11 @@ header #headerBG {
 #navUser.active {
 	background-image: url("../resources/images/fortnite.jpg");
 	background-size: 200px 83px;
-	/*border: 5px solid black;*/
 	transform: translateX(-1rem);
 }
 
 #navUserOptionsList {
 	position: relative;
-	/*top: -50px;*/
 	z-index: -1;
 	width: 200px;
 	display: none;
@@ -61,16 +58,15 @@ header #headerBG {
 	margin-top: 40px;
 	list-style: none;
 	background-color: #323741;
-	/*border-radius: 5px;
-	border-top-left-radius: 0;
-	border-top-right-radius: 0;*/
 }
 #navUserOptionsList li {
 	text-align: center;
 	display: block;
 	margin: 0;
 }
-
+#navUserOptionsList li a.linkAnimate:before {
+	border-radius: 0;
+}
 #navUserOptionsList li a.linkAnimate.logout:before {
 	background-color: #EB3E4A;
 }
@@ -95,56 +91,6 @@ li#navUserName {
 	padding-top: 10px;
 	padding-bottom: 10px;
 	background-color: #222;
-}
-
-section#commentFormContainer {
-	padding-top: 10px;
-	padding-bottom: 10px;
-}
-#commentForm {
-	margin-top: 5px;
-}
-#commentInput {
-	position: relative;
-    box-sizing: border-box;
-	display: block;
-	font-family: "EncodeSans-Regular";
-	font-size: 1em;
-	padding: 7px 12px;
-	width: 100%;
-	height: 5rem;
-	outline: none;
-	resize: none;
-	border: none;
-	background-color: #DDD;
-	margin: 0;
-}
-#commentInput:focus {
-	padding: 4px 9px;
-	border: 3px solid #FFD039;
-}
-#commentFormSubmit {
-	margin-top: 5px;
-	cursor: pointer;
-	border: none;
-	font-size: 13px;
-	padding: 10px;
-	opacity: 0.75;
-	color: white;
-	font-family: "EncodeSans-Regular";
-	background-color: #3c414c;
-	border-radius: 3px;
-	transform: translateY(0);
-	transition: transform 50ms;
-}
-#commentFormSubmit:hover {
-	background-color: #2fbf5d;
-	color: black;
-	opacity: 1;
-}
-#commentFormSubmit:active {
-	opacity: 0.8;
-	transform: translateY(4px);
 }
 
 .userProfilePic {
