changed profile pic to circle border

--- a/Accounts/user_account_style.css
+++ b/Accounts/user_account_style.css
@@ -10,13 +10,14 @@
 }
 
 #leftSideAccountPage img {
-    border-radius: 20%;
     width: 70%;
     min-width: 32px;
     display: block;
     margin-top: 5%;
     margin-left: auto;
     margin-right: auto;
+    border-radius: 50%;
+	border: 2px solid rgba(255,255,255,1);
 }
 
 #leftSideAccountPage form input[type="text"] {
