--- a/Reports/reports.css
+++ b/Reports/reports.css
@@ -13,6 +13,8 @@
     width: 15%;
     margin: 1%;
     display: inline-block;
+    border-radius: 50%;
+    border: 2px solid rgba(255,255,255,1);
 
 }
 
