--- a/forum/post/styles/main.css
+++ b/forum/post/styles/main.css
@@ -302,6 +302,48 @@ h4 {
 #requestInvite.requestJoin.active:before {
 	content: "REQUEST SENT";
 }
+
+
+
+#requestLeave {
+	position: relative;
+	display: inline-block;
+	margin: 0;
+	padding: 10px;
+	margin-bottom: 10px;
+	background: #FFD039;
+	border: none;
+	border-radius: 4px;
+	color: black;
+	font-family: "EncodeSans-Bold";
+	font-size: 1rem;
+	width: 175px;
+	vertical-align: middle;
+	box-shadow: 0 3px 3px 2px rgba(0,0,0,1);
+	cursor: pointer;
+	top: 0;
+	transition: top 50ms;
+}
+#requestLeave:hover {
+	opacity: 0.8;
+}
+#requestLeave:active {
+	opacity: 0.9;
+	top: 4px;
+}
+
+#requestLeave.requestJoin:before {
+	content: "LEAVE";
+}
+#requestLeave.active {
+	background-color: #45C48B;
+}
+
+#requestLeave.requestJoin.active:before {
+	content: "LEFT";
+}
+
+
 .userMessage {
 	position: relative;
 	font-family: "EncodeSans-Regular";
