--- a/final/views/homepage.hbs
+++ b/final/views/homepage.hbs
@@ -10,48 +10,13 @@
 	<meta name="theme-color" content="#323741">
 	<meta name="viewport" content="width=device-width">
 
-	<link rel="stylesheet" href="../styles/main.css">
-	<link rel="stylesheet" href="forum.css">
-	<link rel="stylesheet" href="../styles/user.css">
+	<link rel="stylesheet" href="/styles/main.css">
+	<link rel="stylesheet" href="/styles/forum.css">
+	<link rel="stylesheet" href="/styles/user_header.css">
 </head>
 <body>
-	<header>
-		<div id="headerBG"></div>
-		<div id="headerContainer">
-			<div id="headerContainerPadding">
-				<nav id="topNav">
-					<a id ="topNav_title" href="#"><img id="topNav_titleImg" src="../resources/images/logo2.png" alt="logo"></a>
-					<div id="topNav_hamburger" class="hamburger">
-						<div class="bar"></div>
-						<div class="bar"></div>
-						<div class="bar"></div>
-					</div>
-					<ul id="topNav_links">
-						<li><a class="linkAnimate" href="../forum/loggedInForumAdmin.html">Home</a></li>
-						<li><a class="linkAnimate" href="#">Back to Top</a></li>
-						<li id="loginButtonContainer">
+    {{> header_partial }} <!-- Notice that this is the same name as the header_partial.hbs file sans the extension, thats cuz line35 does this for all in a dir -->
 
-							<div id="navUser">
-								<img id="navUserImg" class="userProfilePic" src="../resources/images/adminProfile.png" alt="adminPic">
-								<ul id="navUserOptionsList">
-									<li id="navUserName">admin</li>
-									<li><a class="linkAnimate" href="../Accounts/admin_viewing_own.html">Profile</a></li>
-									<li><a class="linkAnimate makepost" href="../forum/post/admin-make.html">Make Post</a></li>
-									<li><a class="linkAnimate" href="../Reports/reports.html">Reports</a></li>
-									<li><a class="linkAnimate logout" href="../login/index.html">Log Out</a></li>
-								</ul>
-							</div>
-
-					</li>
-				</ul>
-				</nav>
-				<div id="headerTitleContainer">
-					<h1 id="headerTitle">FIND A GAME</h1>
-				</div>
-				<div id="loginButtonBG"></div>
-			</div>
-		</div>
-	</header>
 	<nav id="sideNav">
 		<div id="sideNavContents">
 			<strong> Games </strong>
@@ -140,9 +105,9 @@
 					<br>Post not found
 			</div>
 	</div>
-	<script type="text/javascript" src="forum.js"></script>
-	<script src="../scripts/main.js"></script>
-	<script type="text/javascript" src="../scripts/user.js"></script>
+	<script type="text/javascript" src="/scripts/forum.js"></script>
+	<script src="/scripts/main.js"></script>
+	<script type="text/javascript" src="../scripts/user_header.js"></script>
 
 
 
